--- a/hierachy-app/src/app/top-nav-bar/header.component.html
+++ b/hierachy-app/src/app/top-nav-bar/header.component.html
@@ -1,4 +1,4 @@
-<!-- <h1>Predigle</h1> -->
+<!-- <h1>Predigle</h1> ngSkipHydration -->
 <lib-top-navbar>
 
   <img navLogo src="https://storybook.predigle.com/assets/logo.svg" style="width: 5rem; height: 1.0936rem;"
