--- a/hierachy-app/src/app/manage_hierarchy/manage_hierarchy.component.html
+++ b/hierachy-app/src/app/manage_hierarchy/manage_hierarchy.component.html
@@ -1,15 +1,11 @@
 <div class="container">
-  <div
-    style="height: 3rem;box-sizing: border-box;padding: 0.5rem; border-bottom: 1px solid var(--Colors-Border-border-primary, #D0D5DD);">
-    <app-header></app-header>
-  </div>
   <div class="container1">
     <div class="container-nav">Navigation bar</div>
     <div class="container-content">
 
       <div class="container-breadcrumb">
         <div class="container-breadcrumb1">BreadCrumb</div>
-        <lib-button [variant]="'contained'" [size]="'medium'" [type]="'primary'" [label]="'Create Connection'">
+        <lib-button [variant]="'contained'" [size]="'medium'" [type]="'primary'" [label]="'Create Node'">
           <mat-icon iconLeft>add</mat-icon>
         </lib-button>
       </div>
