--- a/hierachy-app/src/styles.scss
+++ b/hierachy-app/src/styles.scss
@@ -1,3 +1,5 @@
+@use '@angular/material' as mat;
+
 /* You can add global styles to this file, and also import other style files */
 @import '@predigle/micro/component-ui/styles/utilities/utilities';
 @import '@predigle/micro/component-ui/styles/themes/dark-theme';
@@ -6,6 +8,20 @@
 @import '@predigle/micro/component-ui/styles/abstracts/mixins';
 @import '@predigle/micro/component-ui/styles/abstracts/variables';
 @import '@predigle/micro/component-ui/styles/base/typography';
+
+
+@include mat.all-component-typographies();
+@include mat.core();
+
+/////---styles from story book ---/////
+@import '@predigle/micro/component-ui/styles/utilities/_utilities.scss';
+@import "@predigle/micro/component-ui/styles/themes/_dark-theme.scss";
+@import "@predigle/micro/component-ui/styles/themes/_light-theme.scss";
+@import "@predigle/micro/component-ui/styles/base/_base.scss";
+@import "@predigle/micro/component-ui/styles/base/_typography.scss";
+@import "@predigle/micro/component-ui/styles/abstracts/_mixins.scss";
+@import "@predigle/micro/component-ui/styles/abstracts/_variables.scss";
+/////---styles from story book ---/////
 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 * {
@@ -27,4 +43,445 @@ body {
   height: 100%;
   width: 100%;
   overflow: hidden;
+}
+
+
+
+
+// Update dialog container override to target the MDC dialog container:
+::ng-deep .mat-mdc-mdc-dialog-container {
+  border-radius: var(--dialog-border-radius);
+}
+
+$app-primary: mat.define-palette(mat.$indigo-palette);
+$app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$app-warn: mat.define-palette(mat.$red-palette);
+
+$app-theme: mat.define-light-theme((
+  color: (
+    primary: $app-primary,
+    accent: $app-accent,
+    warn: $app-warn,
+  )
+));
+
+@include mat.all-component-themes($app-theme);
+
+:root {
+  --primary-font-color:#292929;
+  --secondary-font-color: #656565;
+  --box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  --c-transparent-black_200: rgba(0,0,0,.08);
+
+  --black-600: #292929;
+
+  --blue-100: #F4F7FF;
+  --blue-200: #e5eaf6;
+  --blue-500: #2b50e6;
+  --blue-600: #2f4498;
+
+  --grey-100: #e0e0e0;
+  --grey-200: #cfc8c8;
+  --grey-300: #dad8d8;
+  --grey-600: #949494;
+
+  --border-radius: 8px;
+
+
+}
+
+// Global override for dialog container padding:
+.mat-mdc-mdc-dialog-container {
+  padding: 1.2rem !important;
+}
+
+/* The remainder of your global resets, utility classes and custom variables can remain unchanged */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+  font-family: "Inter", sans-serif;  
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+
+::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+  }
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 20px;
+  }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 20px;
+    // background: var(--cart-scrollbar-thumb-color);
+  }
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+
+// html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// start loader skeleton
+
+.skeleton-loader {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 1rem;
+  row-gap: 1rem;
+}
+
+.loader-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  background: #c9c4c469;
+}
+
+// loader styling 
+.loader {
+  width: 45px;
+  aspect-ratio: 1;
+  --c: no-repeat linear-gradient(var(--blue-500) 0 0);
+  background: 
+    var(--c) 0%   50%,
+    var(--c) 50%  50%,
+    var(--c) 100% 50%;
+  background-size: 20% 100%;
+  animation: l1 1s infinite linear;
+}
+@keyframes l1 {
+  0%  {background-size: 20% 100%,20% 100%,20% 100%}
+  33% {background-size: 20% 10% ,20% 100%,20% 100%}
+  50% {background-size: 20% 100%,20% 10% ,20% 100%}
+  66% {background-size: 20% 100%,20% 100%,20% 10% }
+  100%{background-size: 20% 100%,20% 100%,20% 100%}
+}
+// end loader skeleton
+
+// .myPanelClass{
+// margin-top: 2.5rem !important; 
+// border-radius: 0.75rem !important;
+// border: 1px solid #F4F4F4 !important;
+// background: #FFF !important;
+// min-width: unset !important;
+// box-shadow: none !important;
+// }
+
+.mat-mdc-autocomplete-panel{
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px !important;
+
+}
+
+// .mat-mdc-snack-bar-container {
+//   &.success {
+//     background: rgb(56, 142, 60);
+//   }
+
+//   &.error {
+//     background: rgb(211, 47, 47);
+//     color: rgb(255, 255, 255);
+//   }
+
+//   &.info {
+//     background: rgb(2, 136, 209);
+//   }
+// }
+
+// ::ng-deep .mdc-snackbar--open {
+//   &.success {
+//     background: rgb(56, 142, 60);
+//   }
+
+//   &.error {
+//     background: rgb(211, 47, 47);
+//     color: rgb(255, 255, 255);
+//   }
+
+//   &.info {
+//     background: rgb(2, 136, 209);
+//   }
+// }
+
+:root {
+  --dialog-border-radius: 10px; /* Set your desired border radius value */
+}
+
+// start common angular material styling overrides
+          
+.mat-mdc-error {
+  font-size: 12px;
+  margin-top: 15px;
+  color: #d9534f; /* You can customize the color */
+}
+
+.mat-mdc-tab-group {
+  transition: opacity 5s ease-in-out;
+  font-family: "Inter", sans-serif;
+}
+
+.mat-mdc-tab-group.mat-mdc-tab-group-active {
+  opacity: 1;
+}
+
+.mat-mdc-tab-group.mat-mdc-tab-group-inactive {
+  opacity: 0;
+}
+
+// end common angular material styling overrides
+
+// utility classes
+.error-text{
+  color: #ff4040;
+  font-size: 0.75rem;
+  font-weight: 400;
+}
+
+.text-underline {
+  cursor: pointer;
+  text-decoration: underline;
+  color: var(--blue-500);
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+.primary-blue-btn {
+  background: var(--blue-500);
+  border-radius: 8px;
+  color: white;
+  border: none;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 1rem 0;
+  cursor: pointer;
+  transition: transform .2s ease-out, background 0.2s ease-out;
+}
+
+// add hover dark blue background 
+.primary-blue-btn:hover:not([disabled]) {
+  background: var(--blue-600);
+}
+
+.primary-blue-btn:disabled{
+  background-color: var(--grey-200);
+  color: var(--grey-600);
+}
+
+.primary-blue-btn:active{
+  transform: scale(.975);
+}
+
+.primary-grey-btn {
+  background: var(--c-transparent-black_200);
+  border-radius: 8px;
+  color: black;
+  border: none;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 1rem 0;
+  cursor: pointer;
+  transition: transform .2s ease-out, background 0.2s ease-out;
+}
+
+// add hover dark blue background 
+.primary-grey-btn:hover:not([disabled]) {
+  background: var(--grey-300);
+}
+
+.primary-grey-btn:disabled{
+  background-color: var(--grey-200);
+  color: var(--grey-600);
+}
+
+.primary-grey-btn:active{
+  transform: scale(.975);
+}
+
+
+.primary-blue-outline-btn {
+  border-radius: 8px;
+  border: 1px solid #0f58e7;
+  background: #fff;
+  padding: 8px 14px;
+  color: #0F58E7;
+  cursor: pointer;
+  transition: transform .2s ease-out, background 0.2s ease-out;
+}
+
+// add hover dark blue background 
+.primary-blue-outline-btn:hover:not([disabled]) {
+  background: var(--blue-200);
+}
+
+.primary-blue-outline-btn:disabled{
+  background-color: var(--grey-200);
+  color: var(--grey-600);
+}
+
+.primary-blue-outline-btn:active{
+  transform: scale(.975);
+}
+
+
+.primary-black-btn {
+  background: #292929;
+  border-radius: 8px;
+  color: white;
+  border: none;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 8px 9px;
+  padding-right: 16px;
+  cursor: pointer;
+  transition: transform  0.2s ease-out, background 0.2s ease-out;
+  text-wrap: nowrap;
+}
+
+// add hover dark blue background 
+// .primary-black-btn:hover:not([disabled]) {
+//   // background: var(--blue-600);
+// }
+
+.primary-black-btn:disabled{
+  background-color: var(--grey-200);
+  color: var(--grey-600);
+}
+
+.primary-black-btn:active{
+  transform: scale(.975);;
+}
+
+.secondary-blue-btn {
+  background: var(--blue-500);
+  border-radius: 8px;
+  color: white;
+  border: none;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 11px 14px;
+  padding-right: 16px;
+  cursor: pointer;
+  transition: transform 0.2s ease-out, background 0.2s ease-out;
+  text-wrap: nowrap;
+  
+  mat-icon{
+    font-size: 1.5rem;
+  }
+}
+
+// add hover dark blue background 
+.secondary-blue-btn:hover:not([disabled]) {
+  background: var(--blue-600);
+}
+
+.secondary-blue-btn:disabled{
+  background-color: var(--grey-200);
+  color: var(--grey-600);
+}
+
+.secondary-blue-btn:active{
+  transform: scale(.975);;
+}
+
+.no-data {
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    height: 100%;
+    // padding-bottom: 4rem;
+}
+
+.no-data > img {
+  height: 4rem;
+}
+
+
+.google-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #F6FCFF;
+  color: black;
+  border: none;
+  border-radius: 8px;
+  box-shadow: none;
+  padding: 4px 0;
+  transition: transform .2s ease-out;
+  cursor: pointer;
+}
+
+.google-button:hover:not([disabled]) {
+  background-color: var(--c-transparent-black_200);
+}
+
+.google-button:active {
+  transform: scale(.975);
+}
+
+.under-maintenance {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+// utility class
+
+.pointer {
+  cursor: pointer;
 }
